Setup Human Agent

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/HumanSimple.HumanSimple
-EditorStartupMap=/Game/ThirdPerson/Maps/HumanSimple.HumanSimple
+GameDefaultMap=/Game/ThirdPerson/Maps/Human.Human
+EditorStartupMap=/Game/ThirdPerson/Maps/Human.Human
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
